--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version-file: .nvmrc
       - run: yarn install --immutable
-      - run: yarn build
+      - run: yarn workspace iu-fanchants-web build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
