--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: .nvmrc
+      - run: yarn install --immutable
       - run: yarn workspace iu-fanchants-web build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
