--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,6 @@
 {
   "hosting": {
     "public": "packages/web/out",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
