--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,8 +18,9 @@
     "classnames": "^2.3.2",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "firebase": "^10.3.1",
+    "firebase": "^10.8.0",
     "iu-fanchants-common": "workspace:*",
+    "luxon": "^3.4.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -27,5 +28,8 @@
     "react-youtube": "^10.1.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/luxon": "^3.4.2"
   }
 }
